# keryx-miner-supr

./: .gitignore  Cargo.toml  HANDOFF_OPTIMIZATION.md  README.md  build-amd.sh  build.rs  package-amd.sh  package-mmpos-amd.sh  package-mmpos.sh  package-universal.sh  suprtuner.md
.github/workflows/: ci.yaml  deploy.yaml  windows.yml
docs/: devfund-removed.md
examples/: gpu_infer_test.rs
hiveos/: FLIGHT_SHEET.md  README.md  build-amd-glibc.sh  build-glibc-legacy.sh  build-glibc-pascal.sh  build-glibc.sh  build-offline.sh  build-release.sh  package-amd.sh  package-legacy.sh  package-line.sh  package-smos.sh  package.sh
hiveos/pkg-amd/keryx-miner-supr-amd/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh
hiveos/pkg/keryx-miner-supr/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh
inference/: Cargo.toml
inference/src/: ai_payload.rs  fraud_proof.rs  lib.rs  model.rs  model_fixed.rs  task.rs
integrations/hiveos/: createmanifest.sh  h-config.sh  h-stats.sh
mmpos/: README.md
mmpos/keryx-miner-supr/: mmp-external.conf  mmp-launch.sh  mmp-stats.sh
mmpos/keryx-miner-supr-amd/: mmp-external.conf  mmp-launch.sh  mmp-stats.sh
plugin-api/: Cargo.toml
plugin-api/src/: lib.rs
plugins/cuda/: Cargo.toml
plugins/cuda/kaspa-cuda-native/src/: bench_main.cu  kaspa-cuda.cu  keccak-tiny.c
plugins/cuda/resources/: keryx-cuda-sm100.ptx  keryx-cuda-sm120.ptx  keryx-cuda-sm61.ptx  keryx-cuda-sm75.ptx  keryx-cuda-sm80.ptx  keryx-cuda-sm86.ptx  keryx-cuda-sm89.ptx  keryx-cuda-sm90.ptx
plugins/cuda/src/: cli.rs  lib.rs  worker.rs
plugins/opencl/: Cargo.toml  README.md  kbuild_test.c  kdump.c
plugins/opencl/resources/: keryx-opencl.cl  pom_mine.cl
plugins/opencl/src/: cli.rs  lib.rs  pom.rs  worker.rs
proto/: rpc.proto
src/: api.rs  cli.rs  client.rs  lib.rs  llama_vulkan.rs  main.rs  miner.rs  models.rs  pom.rs  pom_gpu.rs  pom_mine.cu  pom_opencl.rs  pow.rs  quantized_gemma3_split.rs  quantized_llama_split.rs  quantized_qwen3_split.rs  slm.rs
src/client/: grpc.rs  stratum.rs
src/client/stratum/: statum_codec.rs
tools/: keryx-pom-oc-tune.sh
