[package]
name = "keryx-miner-supr"
version = "0.6.5"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/suprnova/keryx-miner-supr"
readme = "README.md"
description = "Suprnova fork of the Keryx GPU miner — native sm_120, no devfund tax, faster kernels."
categories = ["command-line-utilities"]
keywords = ["blockchain", "cli"]
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "proto/**",
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
]

[dependencies]
tonic = "0.8"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "net", "io-util", "signal"] }
prost = "0.11"
futures-util = "0.3"
tokio-stream = {version = "0.1", features = ["net"]}
once_cell = "1"
num_cpus = "1"
rand = "0.8"
blake2b_simd = "1.0.0"
clap = { version = "3.0", features = ["color", "derive"]}
log = "0.4"
env_logger = "0.9"
keccak = { version = "0.1", optional = true }
parking = { package = "parking_lot", version = "0.12", optional = true }
libloading = "0.7"
tokio-util = {version = "0.7.0", features = ["codec"]}
serde_json = "1.0"
serde_repr = "0.1"
serde =  {version="1.0", features=["derive"]}
futures = "0.3.21"
bytes = "1.1.0"
async-trait = "0.1"
num = "0.4"
nix = "0.25"
# TCP keepalive on the stratum socket (SO_KEEPALIVE) — keeps NAT/firewall state
# warm and detects a half-open pool socket fast. socket2 is already in the tree
# transitively (via tokio/mio); pin it as a direct dep so we can set keepalive.
socket2 = "0.5"
hex = "0.4"
# Proof-of-Model: possession proof construction (borsh wire-format must match the node).
borsh = { version = "1", features = ["derive"] }
blake3 = "1"
opencl3 = { version = "0.6", optional = true }
keryx-inference = { path = "inference" }
keryx-plugin-api = { path = "plugin-api" }
# Optional: compile the CUDA worker straight into the binary instead of loading
# libkeryxcuda.so at runtime. Enabled by the `static-cuda` feature for a
# single-file build (HiveOS). No cycle because keryxcuda now depends on
# keryx-plugin-api, not on this package.
keryxcuda = { path = "plugins/cuda", optional = true }
secp256k1 = { version = "0.29.0", features = ["global-context"] }
semver = "1.0"
# Phase-3 OPoI: SLM inference via candle.
# suprnova test-fork: dropped `features = ["cuda"]` so the binary builds on a CUDA-less
# host. At runtime the miner already detects no-CUDA via `GpuProbe::NoCuda` and falls back
# to CPU. Only matters for LLM inference on AiRequest tasks; per-share `tag_fixed` MLP is
# baked in from `inference/` and works either way.
candle-core = { version = "0.9" }
candle-transformers = { version = "0.9" }
candle-nn = { version = "0.9" }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ureq = { version = "2", features = ["tls"] }
base64 = "0.22"
anyhow = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
flate2 = "1.0"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Keep the library crate name as `keryx_miner` (not the default
# `keryx_miner_supr` derived from the package name) so `use keryx_miner::*`
# in src/* and `keryx_miner = { path = "../../", package = "keryx-miner-supr" }`
# in the plugin manifests keep working without a sed-pass over the source tree.
[lib]
name = "keryx_miner"
path = "src/lib.rs"

[[bin]]
name = "keryx-miner-supr"
path = "src/main.rs"

[features]
default = ["parking_lot"]
parking_lot = ["parking", "tokio/parking_lot"]
bench = []
no-asm = ["keccak"]
# Single self-contained binary: link the CUDA worker in statically (no
# libkeryxcuda.so to ship). Build with `cargo build --release --features static-cuda`.
static-cuda = ["keryxcuda"]
# AMD PoM: link the OpenCL search driver into the main binary (build-amd enables this).
pom-opencl = ["dep:opencl3"]
# NVIDIA PoM (full parity): upstream's candle-CUDA `pom_gpu` driver (per-tensor gather + zero-dup
# VRAM sharing with the inference engine) + build.rs compiles src/pom_mine.cu -> PTX. Enables
# candle's CUDA backend (candle 0.9 -> cudarc 0.16). AMD/default stays candle-CPU.
pom-cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[target.'cfg(target_os = "windows")'.dependencies]
keccak = "0.1"
kernel32-sys = "0.2"
win32console = "0.1"

[profile.release]
lto = true
codegen-units = 1

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["prost", "transport"] }
cc = "1"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
sha3 = { git = "https://github.com/elichai/hashes", branch = "cSHAKE" }

[workspace]
members = ["inference", "plugin-api", "plugins/*"]
default-members = [".", "plugins/cuda", "plugins/opencl"]

# Vendored candle-kernels with a one-line build.rs patch: the OPoI inference PTX
# (build_ptx) is emitted at CUDA_COMPUTE_CAP (we ship 70 → forward-JITs sm_70→
# sm_120, the whole fleet), while the dead-code MOE WMMA FFI lib (build_lib) is
# pinned to sm_80 because its bf16 tensor-core fragments won't compile below 80.
# Stock candle-kernels uses ONE compute_cap for both, which forced the floor to
# sm_80 and broke GPU inference on Volta/Turing. See vendor/candle-kernels/build.rs.
[patch.crates-io]
candle-kernels = { path = "vendor/candle-kernels" }
