[package]
name = "keryxcuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use the `package` alias so `extern crate keryx_miner` in lib.rs / worker.rs
# keeps compiling unchanged after the parent rename to `keryx-miner-supr`.
keryx_miner = { path = "../../", package = "keryx-miner-supr" }
cust ="0.3"
log = "0.4"
rand = "0.8"
clap = { version = "3.0", features = ["color", "derive"]}
env_logger = "0.9"
# nvml-wrapper drives the temperature / fan / power / clock monitor and
# the locked-clock / power-limit overclock surface. Upstream gates it
# behind the `overclock` feature; we enable it by default in `-supr` so
# `--cuda-lock-mem-clocks`, `--cuda-lock-core-clocks`, `--cuda-power-limits`,
# `--cuda-fan-speed`, and the periodic `[GPU #X] temp=… fan=… power=…`
# log line are always available.
nvml-wrapper = { version = "0.12", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["overclock"]
overclock = [ "nvml-wrapper" ]
